--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,8 +4,8 @@ image:
 
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: echo 'init script' # runs during prebuild
-    command: echo 'start script'
+  - init:
+    command: jupyter money/main.ipynb
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
